# Hive-Industrial-Sentinel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: architecture.md
knowledge/manuals/: transformer_operations_manual.md
src/his/: __init__.py  config.py
src/his/agents/: __init__.py  orchestrator.py  prompts.py  tools.py
src/his/knowledge/: __init__.py  ingestion.py  retrieval.py
src/his/security/: __init__.py  audit.py  lobster_client.py  policy.yaml
src/his/telemetry/: __init__.py  generator.py  repository.py  risk.py
src/hive_industrial_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_policy_cases.py  test_risk.py  test_tools.py
